# zaptek

./: .gitignore  CMakeLists.txt  CMakePresets.json  vcpkg.json
src/: game.h  main.c
src/graphics/: display.c  display.h  opengl.h  shader.c  shader.h
src/input/: keyboard.c  keyboard.h
src/io/: files.c  files.h
src/util/: logging.h  memory_safety.h  vector.c  vector.h
